--- a/unit_3_oop/App/pom.xml
+++ b/unit_3_oop/App/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>App</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,52 +32,25 @@
 
     <build>
         <plugins>
-            <!--      <plugin>-->
-            <!--        <groupId>org.apache.maven.plugins</groupId>-->
-            <!--        <artifactId>maven-compiler-plugin</artifactId>-->
-            <!--        <version>${maven.compiler.plugin.version}</version>-->
-            <!--        <configuration>-->
-            <!--          <source>${java.version}</source>-->
-            <!--          <target>${java.version}</target>-->
-            <!--          <encoding>${project.build.sourceEncoding}</encoding>-->
-            <!--        </configuration>-->
-            <!--      </plugin>-->
-            <!--      <plugin>-->
-            <!--        <groupId>org.apache.maven.plugins</groupId>-->
-            <!--        <artifactId>maven-jar-plugin</artifactId>-->
-            <!--        <version>${maven.jar.plugin.version}</version>-->
-            <!--        <configuration>-->
-            <!--          <archive>-->
-            <!--            <manifest>-->
-            <!--              <addClasspath>true</addClasspath>-->
-            <!--              <mainClass>ua.com.alevel.App</mainClass>-->
-            <!--            </manifest>-->
-            <!--          </archive>-->
-            <!--        </configuration>-->
-            <!--      </plugin>-->
-            <!--      <plugin>-->
-            <!--        <groupId>org.apache.maven.plugins</groupId>-->
-            <!--        <artifactId>maven-surefire-plugin</artifactId>-->
-            <!--        <version>${maven.surefire.plugin.version}</version>-->
-            <!--      </plugin>-->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.0</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>ua.com.alevel.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
                 <executions>
-                    <!-- Attach the shade goal into the package phase -->
                     <execution>
+                        <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>shade</goal>
+                            <goal>single</goal>
                         </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ua.com.alevel.App</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
