--- a/unit_3_oop/pom.xml
+++ b/unit_3_oop/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>ua.com.alevel</groupId>
     <artifactId>unit_3_oop</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ConsoleHelper</module>
@@ -13,11 +14,26 @@
         <module>App</module>
     </modules>
 
-    <packaging>pom</packaging>
+
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
