completed all tasks

--- a/module_1/level3/pom.xml
+++ b/module_1/level3/pom.xml
@@ -9,12 +9,21 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>level1</artifactId>
+    <artifactId>level3</artifactId>
     <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
+        <reflections.version>0.9.12</reflections.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${reflections.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
