--- a/module_1/AllTasks/pom.xml
+++ b/module_1/AllTasks/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>level1</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ua.com.alevel</groupId>
+            <artifactId>level2</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ua.com.alevel</groupId>
+            <artifactId>level3</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -30,7 +40,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ua.com.alevel.StartAllTasks</mainClass>
+                            <mainClass>ua.com.alevel.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
