added run.bat to run the project and README.MD with details

--- a/unit_7_collection_1/OrderedList/pom.xml
+++ b/unit_7_collection_1/OrderedList/pom.xml
@@ -47,7 +47,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ua.com.alevel.CalendarAppMain</mainClass>
+                            <mainClass>ua.com.alevel.OrderedListMain</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
