--- a/practise/pom.xml
+++ b/practise/pom.xml
@@ -7,10 +7,14 @@
     <groupId>ua.com.alevel</groupId>
     <artifactId>practise</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>racetrack</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
-    
+
 </project>
