--- a/final_project/.gitignore
+++ b/final_project/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 !**/src/main/resources/application-bot.yml
+*/urls.txt
 
 ### STS ###
 .apt_generated
