--- a/final_project/pom.xml
+++ b/final_project/pom.xml
@@ -40,10 +40,10 @@
             <version>1.4.7</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -98,6 +98,7 @@
     </dependencies>
 
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
